--- a/2220115&2220145_Assignment2_SD7502.ipynb
+++ b/2220115&2220145_Assignment2_SD7502.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "b98da2d0-9052-4da9-aa84-a5f756224fef",
    "metadata": {},
    "outputs": [
@@ -138,8 +138,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "4c24d1e6-5a46-475b-bb3d-5e6262505a4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2A Define a Data Loader class and transformation pipeline "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d7e2fad9-a85e-4e01-b72a-d83a0717b2cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch \n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torchvision import transforms, datasets\n",
+    "from PIL import Image\n",
+    "\n",
+    "#Defining the transformation pipeline for preprocessing images\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)), #To resize images to a resolution of 224x224\n",
+    "    transforms.ToTensor(), #To convert images to Tensor\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]) #To normalize using ImageNet standards\n",
+    "])\n",
+    "\n",
+    "#Defining a custom Dataset class\n",
+    "class ButterflyDataset(Dataset):\n",
+    "    #Loads the images and their corresponding labels\n",
+    "    def __init__(self, csv_file, root_dir, transform=None):\n",
+    "        self.data = pd.read_csv(csv_file)\n",
+    "        self.root_dir = root_dir\n",
+    "        self.transform = transform\n",
+    "\n",
+    "    #Function to return the total number of samples in the dataset \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    #Function to get a specific sample when called by the dataloader\n",
+    "    def __getitem__(self, idx):\n",
+    "        img_name = f\"{self.root_dir}/{self.data.iloc[idx, 0]}\"\n",
+    "        image = Image.open(img_name).convert(\"RGB\")\n",
+    "        label = self.data.iloc[idx, 1]\n",
+    "\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image)\n",
+    "\n",
+    "        return image, label\n",
+    "\n",
+    "#Initalizing Dataset and Dataloader\n",
+    "train_dataset = ButterflyDataset(csv_file='D:/GitHub/SD7502-Project2-2220115_2220145/Datasets/archive/Training_set.csv', #Path to CSV file\n",
+    "                                root_dir='D:/GitHub/SD7502-Project2-2220115_2220145/Datasets/archive/train', #Path to images\n",
+    "                                transform=transform)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "\n",
+    "#Loading the test data\n",
+    "test_dataset = ButterflyDataset(csv_file='D:/GitHub/SD7502-Project2-2220115_2220145/Datasets/archive/Testing_set.csv', #Path to CSV file\n",
+    "                                root_dir='D:/GitHub/SD7502-Project2-2220115_2220145/Datasets/archive/test', #Path to images\n",
+    "                                transform=transform)\n",
+    "\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
+    "\n",
+    "print(\"Complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7402bd42-e9a3-427b-b346-71ad790db034",
    "metadata": {},
    "outputs": [],
    "source": []
