Prepared three sets of data for evaluation
Training, Validation, and Test sets have been prepared to evaluate the models.

--- a/2220115&2220145_Assignment2_SD7502.ipynb
+++ b/2220115&2220145_Assignment2_SD7502.ipynb
@@ -148,18 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "d7e2fad9-a85e-4e01-b72a-d83a0717b2cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Complete!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch \n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -208,15 +200,64 @@
     "                                root_dir='D:/GitHub/SD7502-Project2-2220115_2220145/Datasets/archive/test', #Path to images\n",
     "                                transform=transform)\n",
     "\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7402bd42-e9a3-427b-b346-71ad790db034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2B Training, Validating, and Testing the models "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d002193f-7b10-4974-9e42-ad69b50919b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set size: 5199\n",
+      "Validation set size: 1300\n",
+      "Test set size: 2786\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.utils.data import random_split\n",
     "\n",
-    "print(\"Complete!\")"
+    "#Loading the full training set\n",
+    "full_train_dataset = ButterflyDataset(csv_file='D:/GitHub/SD7502-Project2-2220115_2220145/Datasets/archive/Training_set.csv', #Path to CSV file\n",
+    "                                root_dir='D:/GitHub/SD7502-Project2-2220115_2220145/Datasets/archive/train', #Path to images\n",
+    "                                transform=transform)\n",
+    "\n",
+    "#Defining the split ratios\n",
+    "train_size = int(0.8 * len(full_train_dataset)) #80% for training\n",
+    "val_size = len(full_train_dataset) - train_size #20% for validation (remainder)\n",
+    "\n",
+    "#Splitting the dataset into training and validation sets\n",
+    "train_dataset, val_dataset = random_split(full_train_dataset, [train_size, val_size])\n",
+    "\n",
+    "#Preparing DataLoaders for training, validation, and test sets\n",
+    "#NOTE: Training and Test sets have been prepared in the previous cell\n",
+    "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
+    "\n",
+    "#Printing the datasets\n",
+    "print(f\"Training set size: {len(train_dataset)}\")\n",
+    "print(f\"Validation set size: {len(val_dataset)}\")\n",
+    "print(f\"Test set size: {len(test_dataset)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7402bd42-e9a3-427b-b346-71ad790db034",
+   "id": "549fbb77-8577-41a5-bb26-c5aa3e142828",
    "metadata": {},
    "outputs": [],
    "source": []
