Added three deep learning models
CNN, MLP, and RNN have been used to construct classification models. Comments describing the models will be added in a future commit.

--- a/2220115&2220145_Assignment2_SD7502.ipynb
+++ b/2220115&2220145_Assignment2_SD7502.ipynb
@@ -257,10 +257,140 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "549fbb77-8577-41a5-bb26-c5aa3e142828",
+   "id": "a913e094-c38a-42e3-8a29-a03f6be96d81",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#2C Developing deep learning models to construct classification models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc06b186-36e2-4c38-be19-76b9389d1390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convolutional Neural Network (CNN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "549fbb77-8577-41a5-bb26-c5aa3e142828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "class CNNModel(nn.Module):\n",
+    "    def init(self, num_classes=10):\n",
+    "        super(CNNModel, self).init()\n",
+    "        self.conv1 = nn.Conv2d(3, 16, kernal_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernal_size=3, padding=1)\n",
+    "        self.conv3 = nn.Conv2d(32, 64, kernal_size=3, padding=1)\n",
+    "        self.pool = nn.MaxPool2d(kernal_size=2, stride=2)\n",
+    "        self.fc1 = nn.Linear(64 * 28 * 28, 128)\n",
+    "        self.fc2 = nn.Linear(128, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = self.pool(F.relu(self.conv3(x)))\n",
+    "        x = x.view(-1, 64 * 28 * 28)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "print(\"Complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9a3aba8b-0906-46c9-a35f-acf0e9c09033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Multilayer Perceptron (MLP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d20758df-5299-4a63-99a6-b15ceac7fe4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MLPModel(nn.Module):\n",
+    "    def __init__(self, num_classes=10):\n",
+    "        super(MLPModel, self).__init__()\n",
+    "        #Flattening the image (3 channels * 224x224)\n",
+    "        self.fc1 = nn.Linear(3 * 224 * 224, 512)\n",
+    "        self.fc2 = nn.Linear(512, 128)\n",
+    "        self.fc3 = nn.Linear(128, num_classes)\n",
+    "\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        #Flattening the input\n",
+    "        x = x.view(-1, 3 * 224 * 224)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "print(\"Complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7a983726-43c0-49ff-bf34-f08f3586e19b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Recurrent Neural Network (RNN) with LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4ee50b0-b02d-4163-b7bb-303adbfbadad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RNNModel(nn.Module):\n",
+    "    def __init__(self, num_classes=10, input_size=64, hidden_size=128, num_layers=2):\n",
+    "        super(RNNModel, self).__init__()\n",
+    "        self.ltsm = nn.LTSM(input_size=input_size, hidden_size=hidden_size, num_layers=num_layers, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        #Reshaping to (batch_size, num_patches, and patch_size)\n",
+    "        x = x.view(-1, 224, 224) #Treating each row as a time stop\n",
+    "        lstm_out, _ = self.ltsm(x)\n",
+    "        lstm_out = lstm_out[:, -1, :] #Getting the output of the last time step\n",
+    "        x = self.fc(lstm_out)\n",
+    "        return x\n",
+    "\n",
+    "print(\"Complete!\")"
+   ]
   }
  ],
  "metadata": {
